[package]
name = "m17web-proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
ezsockets = { version = "0.6.2", features = ["tungstenite"] }
lazy_static = "1.4.0"
async-trait = "0.1.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
envconfig = "0.11.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["blocking"] }

