[package]
name = "m17web-proxy"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
ezsockets = { version = "0.7.1", features = ["tungstenite"] }
lazy_static = "1.5.0"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
envconfig = "0.11.1"
rand = "0.9.2"
opendht-sys = "1.0.1"
libc = "0.2"
rmp-serde = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"

